--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -574,16 +574,8 @@ video {
   bottom: 1.25rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
 .left-\[10px\] {
   left: 10px;
-}
-
-.right-0 {
-  right: 0px;
 }
 
 .right-5 {
@@ -610,17 +602,8 @@ video {
   margin: 3rem;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .block {
@@ -641,6 +624,10 @@ video {
 
 .h-16 {
   height: 4rem;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-6 {
@@ -675,12 +662,8 @@ video {
   height: 100%;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
-.h-5 {
-  height: 1.25rem;
+.h-screen {
+  height: 100vh;
 }
 
 .w-7 {
@@ -850,10 +833,6 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-black\/\[0\.6\] {
-  background-color: rgb(0 0 0 / 0.6);
-}
-
 .bg-blue-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
@@ -1011,7 +990,6 @@ video {
 
 html,
 body {
-  position: relative;
   height: 100vh;
   background-color: rgb(221, 221, 221);
 }
