--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -694,6 +694,14 @@ video {
   width: 100%;
 }
 
+.w-\[220px\] {
+  width: 220px;
+}
+
+.w-\[230px\] {
+  width: 230px;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -884,6 +892,11 @@ video {
 .bg-green-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-70 {
